--- a/sass/style.sass
+++ b/sass/style.sass
@@ -130,12 +130,14 @@ img, iframe
   width: 100%
   top: -1px
   z-index: 9
+  background: #000000
   background: #000000d9
   padding: 6px 9px 3px
   box-shadow: 0px 3px 13px #3c3c3c
   min-height: 45px
 
 .footer
+  background: #000000
   background: #000000d9
   padding: 6px 9px 3px
   box-shadow: 0px 3px 13px #3c3c3c
@@ -229,6 +231,7 @@ i.fa
   height: max-content
   height: 1500px
   height: -webkit-fill-available
+  background: #000000
   background: #000000d9
   top: 0
   width: 100%
@@ -243,6 +246,7 @@ i.fa
 
 .modal-containner
   width: fit-content
+  width: -moz-fit-content
   margin: 10% auto
   height: auto
   background: #fff
@@ -285,6 +289,7 @@ i.fa.fa-times
   input[type="text"]
     width: 280px
   .modal-containner
+    background: #000000
     background: #00000000
     color: #f1f1f1
     box-shadow: none
@@ -318,6 +323,7 @@ i.fa.fa-times
   .search-container
     position: absolute
     margin-top: -51px
+    background: #ff0084
     background: #ff0084a1
     width: 78%
     margin-left: -66%
