--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ img, iframe {
   z-index: 9;
 }
 .top-bar, .footer {
+  background: #000000;
   background: #000000d9;
   padding: 6px 9px 3px;
   box-shadow: 0px 3px 13px #3c3c3c;
@@ -218,6 +219,7 @@ i.fa.fa-search, i.fa.fa-times {
   height: max-content;
   height: 1500px;
   height: -webkit-fill-available;
+  background: #000000;
   background: #000000d9;
   top: 0;
   width: 100%;
@@ -232,6 +234,7 @@ i.fa.fa-search, i.fa.fa-times {
 }
 .modal-containner {
   width: fit-content;
+  width: -moz-fit-content;
   margin: 10% auto;
   height: auto;
   background: #fff;
@@ -281,6 +284,7 @@ i.fa.fa-times {
     width: 280px;
   }
   .modal-containner {
+    background: #000000;
     background: #00000000;
     color: #f1f1f1;
     box-shadow: none;
@@ -325,6 +329,7 @@ i.fa.fa-times {
   .search-container {
     position: absolute;
     margin-top: -51px;
+    background: #ff0084;
     background: #ff0084a1;
     width: 78%;
     margin-left: -66%;
