--- a/sass/style.sass
+++ b/sass/style.sass
@@ -177,7 +177,7 @@ input[type="text"]
     transition: all .9s ease
 
 div
-  &#viewlist
+  &#viewlist, &#viewgrid
     width: 85px
     background: #ff0084
     text-align: center
@@ -186,15 +186,26 @@ div
     color: #fff
     box-shadow: 1px 2px 9px #737373
     font-size: 1em
+    -webkit-transition: all .9s ease
+    -moz-transition: all .9s ease
+    -o-transition: all .9s ease
+    -ms-transition: all .9s ease
+    transition: all .9s ease
+  &#viewlist:hover
+    background: #e03d78
+    -webkit-transition: all .9s ease
+    -moz-transition: all .9s ease
+    -o-transition: all .9s ease
+    -ms-transition: all .9s ease
+    transition: all .9s ease
   &#viewgrid
-    width: 85px
-    background: #ff0084
-    text-align: center
-    padding: 12px
-    cursor: pointer
-    color: #fff
-    box-shadow: 1px 2px 9px #737373
-    font-size: 1em
+    &:hover
+      background: #e03d78
+      -webkit-transition: all .9s ease
+      -moz-transition: all .9s ease
+      -o-transition: all .9s ease
+      -ms-transition: all .9s ease
+      transition: all .9s ease
     display: none
 
 .list-container
