--- a/sass/style.sass
+++ b/sass/style.sass
@@ -193,6 +193,7 @@ div
     transition: all .9s ease
   &#viewlist:hover
     background: #e03d78
+    color: #d8d9da
     -webkit-transition: all .9s ease
     -moz-transition: all .9s ease
     -o-transition: all .9s ease
@@ -201,6 +202,7 @@ div
   &#viewgrid
     &:hover
       background: #e03d78
+      color: #d8d9da
       -webkit-transition: all .9s ease
       -moz-transition: all .9s ease
       -o-transition: all .9s ease
