--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,7 @@ div#viewlist, div#viewgrid {
 }
 div#viewlist:hover, div#viewgrid:hover {
   background: #e03d78;
+  color: #d8d9da;
   -webkit-transition: all .9s ease;
   -moz-transition: all .9s ease;
   -o-transition: all .9s ease;
