--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,6 +3,11 @@ body
   margin: 0
   font-family: 'Lato', sans-serif
 
+h1
+  font-size: 1em
+  font-weight: 100
+  margin: 0
+
 .masonry
   column-count: 6
   column-gap: 1em
@@ -15,7 +20,7 @@ body
   font-size: 2.5em
   font-weight: bold
   float: left
-  span.letter
+  span.logo-letter
     color: #ff0084
 
 .heart
