--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ img, iframe {
   box-shadow: 0px 3px 13px #3c3c3c;
   min-height: 45px;
 }
-.top-bar..interaction{
+.top-bar.interaction{
   -webkit-transition: all .9s ease;
   -moz-transition: all .9s ease;
   -o-transition: all .9s ease;
