--- a/sass/style.sass
+++ b/sass/style.sass
@@ -364,6 +364,8 @@ i.fa.fa-times
 @media only screen and (max-width: 530px)
   .top-bar
     padding: 6px 0px 3px
+    &.interaction
+      padding: 6px 0px 3px
   .menu
     display: none
   .container
